--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"zod-validation-error": "^3.3.1"
 	},
 	"dependencies": {
-		"@zachleat/heading-anchors": "^1.0.1"
+		"@zachleat/heading-anchors": "^1.0.1",
+		"yarn": "^1.22.22"
 	}
 }
